[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/game/piano.gd" type="Script" id=1]
[ext_resource path="res://assets/game/piano/zoom.png" type="Texture" id=2]
[ext_resource path="res://assets/game/piano/touche_blanche_1.png" type="Texture" id=3]
[ext_resource path="res://assets/game/piano/touche_blanche_4.png" type="Texture" id=4]
[ext_resource path="res://assets/game/piano/touche_blanche_2.png" type="Texture" id=5]
[ext_resource path="res://assets/game/piano/touche_blanche_3.png" type="Texture" id=6]
[ext_resource path="res://assets/game/piano/touche_noire.png" type="Texture" id=7]
[ext_resource path="res://themes/text30.tres" type="Theme" id=8]

[node name="piano" type="Node2D"]

transform/pos = Vector2( 0, 1 )
script/script = ExtResource( 1 )

[node name="piano" type="Sprite" parent="."]

transform/pos = Vector2( 1385.66, 526.894 )
transform/scale = Vector2( 3.7, 2.4 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PianoDo" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 660.0
margin/top = 658.0
margin/right = 740.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 3 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoDo2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1170.0
margin/top = 658.0
margin/right = 1250.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 4 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoRe" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 733.0
margin/top = 658.0
margin/right = 814.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 5 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoMi" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 804.0
margin/top = 658.0
margin/right = 883.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 6 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoDoDiese" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 708.0
margin/top = 658.0
margin/right = 757.0
margin/bottom = 847.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoReDiese" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 776.0
margin/top = 658.0
margin/right = 825.0
margin/bottom = 847.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoFa" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 878.0
margin/top = 658.0
margin/right = 958.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 3 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoSol" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 952.0
margin/top = 658.0
margin/right = 1033.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 5 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoFaDiese" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 930.0
margin/top = 658.0
margin/right = 979.0
margin/bottom = 847.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoLa" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1024.0
margin/top = 658.0
margin/right = 1105.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 5 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoSolDiese" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1006.0
margin/top = 658.0
margin/right = 1055.0
margin/bottom = 847.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoSi" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1100.0
margin/top = 658.0
margin/right = 1179.0
margin/bottom = 984.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 6 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="PianoLaDiese" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1076.0
margin/top = 657.0
margin/right = 1125.0
margin/bottom = 846.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="doLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 670.0
margin/top = 1001.0
margin/right = 721.0
margin/bottom = 1041.0
text = "Do"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="do2Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 1185.0
margin/top = 1001.0
margin/right = 1236.0
margin/bottom = 1041.0
text = "Do"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="reLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 745.0
margin/top = 1001.0
margin/right = 796.0
margin/bottom = 1041.0
text = "RÃ©"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="miLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 817.0
margin/top = 1001.0
margin/right = 868.0
margin/bottom = 1041.0
text = "Mi"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="faLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 891.0
margin/top = 1000.0
margin/right = 942.0
margin/bottom = 1040.0
text = "Fa"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="solLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 962.0
margin/top = 1000.0
margin/right = 1019.0
margin/bottom = 1040.0
text = "Sol"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="laLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 1044.0
margin/top = 1000.0
margin/right = 1095.0
margin/bottom = 1040.0
text = "La"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="siLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 8 )
margin/left = 1113.0
margin/top = 999.0
margin/right = 1164.0
margin/bottom = 1039.0
text = "Si"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


